RESOLVED FIXED228904
WebGL 2.0 doesn't work on A8 devices (iPad mini 4, iPad Air 2)
https://bugs.webkit.org/show_bug.cgi?id=228904
Summary WebGL 2.0 doesn't work on A8 devices (iPad mini 4, iPad Air 2)
Dean Jackson
Reported 2021-08-08 11:38:50 PDT
WebGL 2.0 doesn't work on A8 devices (iPad mini 4, iPad Air 2)
Attachments
Patch (2.70 KB, patch)
2021-08-08 11:45 PDT, Dean Jackson
no flags
Patch (2.74 KB, patch)
2021-08-08 13:04 PDT, Dean Jackson
andersca: review+
Dean Jackson
Comment 1 2021-08-08 11:41:47 PDT
Dean Jackson
Comment 2 2021-08-08 11:45:46 PDT
Dean Jackson
Comment 3 2021-08-08 13:04:36 PDT
John Cunningham
Comment 4 2021-08-08 15:09:35 PDT
Comment on attachment 435151 [details] Patch LGTM
Dean Jackson
Comment 5 2021-08-09 11:17:42 PDT
derhold
Comment 6 2022-01-28 13:45:59 PST
Hey Dean or John, Any update on what version of iOS will include the version of WebKit that has this fix? Thanks
Kyle Piddington
Comment 7 2022-01-28 15:42:52 PST
I'm not sure if this fix took, I'm not seeing us switch automatically to the GL backend on older devices. That, or it was lost in a refactor. Visiting https://www.soft8soft.com/webglreport/?v=2 with Metal on ANGLE enabled claims that webGL2 is not supported, where disabling Metal on ANGLE shows support.
Kyle Piddington
Comment 8 2022-01-28 15:45:14 PST
Reopening, on an iPad Air 2, I'm seeing us fail to switch back to the OpenGL backend.
Kenneth Russell
Comment 9 2022-01-31 09:41:40 PST
+Kimmo Perhaps refactors for the GPU process changed the semantics in this area? platformSupportsMetal() is still present in Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm and it's still called during context creation.
Dean Jackson
Comment 10 2022-01-31 16:11:10 PST
New radar: rdar://88300200
Kimmo Kinnunen
Comment 11 2022-01-31 22:45:48 PST
Maybe the ANGLE roll pulled in new ANGLE that defaults to Metal unless OPENGLES explicitly asked..
Kenneth Russell
Comment 12 2022-02-01 14:12:51 PST
Possible - not sure. Note Chromium's starting to ship ANGLE's OpenGL backend on macOS in preparation for shipping the Metal backend, so it's still known to work to some degree.
Kimmo Kinnunen
Comment 13 2022-02-02 05:50:13 PST
Seems to be that iOS sandbox denies EAGL usage.
Harsh
Comment 14 2022-02-02 14:46:04 PST
Hi- Does this issue impact only some devices? What all would be those devices? Also would love some insight on the fix for this. Thanks for the support!
Harsh
Comment 15 2022-02-09 14:11:06 PST
Hi, I see the two bugs that this issue was dependent on are already closed. Is there a fix for this being release in next version?
Kimmo Kinnunen
Comment 16 2022-03-01 02:04:23 PST
(In reply to Harsh from comment #15) > Hi, I see the two bugs that this issue was dependent on are already closed. > Is there a fix for this being release in next version? This should fix using WebGL2 on iPad mini 4 on iOS 15.4. This should be fixed in iOS 15.4 seed 4.
derhold
Comment 17 2022-03-28 11:48:00 PDT
Hey Kimmo, Just tested this case on iPad Air 2 on iOS 15.4 and was still able to reproduce the issue. Your last comment noted that it should be fixed on mini 4 on 15.4 - does this mean that it should be fixed on Air 2 as well?
rahsaraf
Comment 18 2022-03-31 17:09:11 PDT
Following up on this as we're still seeing the issue on the iPad Air 2. Did the fix that went out in iPadOS 15.4 only affect the iPad Mini 4? If so, is there an expected fix and timeframe for the iPad Air 2 (A8X in the iPad Air 2 vs A8 in the iPad Mini 4)
Note You need to log in before you can comment on or make changes to this bug.